Atualização do plugin para 1.21.11